--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
   scrollable_positioned_list: ^0.2.3
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.6
+  flutter_local_notifications: ^18.0.1
+  googleapis_auth: ^1.6.0
+  app_settings: ^5.1.1
+  dio: ^5.7.0
 
 
 dev_dependencies:
